--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BnM Lenswork | Photography & Ice Run</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Three.js for 3D game -->
+  <!-- ✅ Load Three.js before our script -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
 </head>
+
 <body>
-  <!-- Navbar -->
+  <!-- ===== Navbar ===== -->
   <header>
     <nav class="navbar">
       <div class="logo">BnM <span>Lenswork</span></div>
@@ -22,7 +23,7 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
+  <!-- ===== Hero Section ===== -->
   <section id="home" class="hero">
     <div class="hero-content">
       <h1>Capturing Moments, Creating Stories</h1>
@@ -31,48 +32,49 @@
     </div>
   </section>
 
-  <!-- Gallery -->
+  <!-- ===== Gallery ===== -->
   <section id="gallery" class="gallery">
     <h2>Photography Showcase</h2>
     <div class="gallery-grid">
-      <img src="images/photo1.jpg" alt="Gallery Image 1">
-      <img src="images/photo2.jpg" alt="Gallery Image 2">
-      <img src="images/photo3.jpg" alt="Gallery Image 3">
-      <img src="images/photo4.jpg" alt="Gallery Image 4">
+      <img src="images/photo1.jpg" alt="Gallery 1" />
+      <img src="images/photo2.jpg" alt="Gallery 2" />
+      <img src="images/photo3.jpg" alt="Gallery 3" />
+      <img src="images/photo4.jpg" alt="Gallery 4" />
     </div>
   </section>
 
-  <!-- About -->
+  <!-- ===== About ===== -->
   <section id="about" class="about">
     <h2>About BnM Lenswork</h2>
-    <p>BnM Lenswork captures life’s most beautiful moments — from portraits and landscapes to creative projects and motion shots.</p>
+    <p>BnM Lenswork captures life’s most beautiful moments — portraits, landscapes, and creative motion shots.</p>
   </section>
 
-  <!-- Contact -->
+  <!-- ===== Contact ===== -->
   <section id="contact" class="contact">
     <h2>Contact</h2>
     <p>📧 Email: <a href="mailto:bnmlenswork@gmail.com">bnmlenswork@gmail.com</a></p>
     <p>📸 Instagram: <a href="https://instagram.com" target="_blank">@bnmlenswork</a></p>
   </section>
 
-  <!-- Footer -->
+  <!-- ===== Footer ===== -->
   <footer>
     <p>© 2025 BnM Lenswork | All Rights Reserved</p>
   </footer>
 
-  <!-- Game Button -->
+  <!-- ===== Game Button + Overlay ===== -->
   <button id="openGame" class="game-button">🎮</button>
 
-  <!-- Game Overlay -->
   <div id="gameOverlay" class="game-overlay">
     <button id="closeGame" class="close-btn">✖</button>
     <canvas id="gameCanvas"></canvas>
   </div>
 
+  <!-- ===== Game Script ===== -->
   <script>
     const openBtn = document.getElementById('openGame');
     const closeBtn = document.getElementById('closeGame');
     const overlay = document.getElementById('gameOverlay');
+    let scene, camera, renderer, cube, animationId;
 
     openBtn.onclick = () => {
       overlay.style.display = 'flex';
@@ -82,10 +84,9 @@
     closeBtn.onclick = () => {
       overlay.style.display = 'none';
       cancelAnimationFrame(animationId);
+      if (renderer) renderer.dispose();
     };
 
-    // Basic 3D setup
-    let scene, camera, renderer, cube, animationId;
     function initGame() {
       const canvas = document.getElementById('gameCanvas');
       scene = new THREE.Scene();
